--- a/semana2/dia5/01-animaciones.html
+++ b/semana2/dia5/01-animaciones.html
@@ -11,8 +11,14 @@
     <section>
     <h1>Animaciones CSS</h1>
     <p class="texo-animado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum provident labore voluptatem, asperiores doloremque animi culpa a totam voluptates non odio laboriosam, aliquid saepe, corrupti quis quia suscipit obcaecati eum!</p>
+
     <h2>Imagenes Animadas</h2>
     <img class="image-animada" src="./image-avatar.png" alt="">
+
+    <h2>cajas</h2>
+    <div class="box-uno"></div>
+    <h2>ball</h2>
+    <div class="ball-uno"></div>
     </section>
 </body>
 </html>
