--- a/semana2/dia6/practicas/card.html
+++ b/semana2/dia6/practicas/card.html
@@ -8,16 +8,18 @@
     <title>Card Rotation</title>
   </head>
   <body>
+    
     <div class="giratorio">
       <div class="contenido">
         <div class="contenido-frente">
           <img src="./ic-logo.png" alt="logo" />
+          <h1>💻 Guillermo Sifuentes💻 </h1>
         </div>
         <div class="contenido-trasero">
           <img class="logo" src="./ic-logo.png" alt="logo" />
           <h1>Programador-Frontend</h1>
           <p>Web-Mobile-Desktop</p>
-          <p>Contactame</p>
+          <p>Contactame📞 </p>
         </div>
       </div>
     </div>
