subiendo avance dia 3 semana 3

--- a/semana3/dia2/index.html
+++ b/semana3/dia2/index.html
@@ -43,48 +43,52 @@
 				</div>
 			</section>
 
-			<section class="bg-gray">
-				<section class="main__features">
-					<div class="main__features-search">
-						<input type="text" placeholder="Shorten a link here..." />
-						<button class="action-button">Shorten It!</button>
-					</div>
-					<div class="main__features-title">
-						<h2>Advanced Statistics</h2>
-						<p>
-							Track how your links are performing across the web with our
-							advanced statistics dashboard.
+			<section class="main__features">
+				<div class="main__features-search">
+					<input type="text" placeholder="Shorten a link here..." />
+					<button class="action-button">Shorten It!</button>
+				</div>
+				<div class="main__features-title">
+					<h2>Advanced Statistics</h2>
+					<p>
+						Track how your links are performing across the web with our advanced
+						statistics dashboard.
+					</p>
+				</div>
+				<div class="main__features-cards">
+					<div class="card">
+						<div class="card__img">
+							<img src="./images/icon-brand-recognition.svg" alt="" />
+						</div>
+						<h3 class="card__title">Brand Recognition</h3>
+						<p class="card__text">
+							Boost your brand recognition with each click. Generic links don’t
+							mean a thing. Branded links help instil confidence in your
+							content.
 						</p>
 					</div>
-					<div class="main__features-cards">
-						<div class="card">
-							<div class="card__img"><img src="" alt="" /></div>
-							<h3 class="card__title">Brand Recognition</h3>
-							<p class="card__text">
-								Boost your brand recognition with each click. Generic links
-								don’t mean a thing. Branded links help instil confidence in your
-								content.
-							</p>
+					<div class="card">
+						<div class="card__img">
+							<img src="./images/icon-detailed-records.svg" alt="" />
 						</div>
-						<div class="card">
-							<div class="card__img"><img src="" alt="" /></div>
-							<h3 class="card__title">Detailed Records</h3>
-							<p class="card__text">
-								Gain insights into who is clicking your links. Knowing when and
-								where people engage with your content helps inform better
-								decisions.
-							</p>
-						</div>
-						<div class="card">
-							<div class="card__img"><img src="" alt="" /></div>
-							<h3 class="card__title">Fully Customizable</h3>
-							<p class="card__text">
-								Improve brand awareness and content discoverability through
-								customizable links, supercharging audience engagement.
-							</p>
-						</div>
+						<h3 class="card__title">Detailed Records</h3>
+						<p class="card__text">
+							Gain insights into who is clicking your links. Knowing when and
+							where people engage with your content helps inform better
+							decisions.
+						</p>
 					</div>
-				</section>
+					<div class="card">
+						<div class="card__img">
+							<img src="./images/icon-fully-customizable.svg" alt="" />
+						</div>
+						<h3 class="card__title">Fully Customizable</h3>
+						<p class="card__text">
+							Improve brand awareness and content discoverability through
+							customizable links, supercharging audience engagement.
+						</p>
+					</div>
+				</div>
 			</section>
 		</main>
 
