subiendo avance final dia 3 semana 3

--- a/semana3/dia2/index.html
+++ b/semana3/dia2/index.html
@@ -32,16 +32,18 @@
 		</header>
 
 		<main class="main">
-			<section class="main__hero">
-				<div class="main__hero-title">
-					<h1>More than just shorter links</h1>
-					<p class="main__hero-description">
-						Build your brand’s recognition and get detailed insights on how your
-						links are performing.
-					</p>
-					<button class="main__hero-action action-button">Get Started</button>
-				</div>
-			</section>
+			<div class="main__hero-wrapper">
+				<section class="main__hero">
+					<div class="main__hero-title">
+						<h1>More than just shorter links</h1>
+						<p class="main__hero-description">
+							Build your brand’s recognition and get detailed insights on how
+							your links are performing.
+						</p>
+						<button class="main__hero-action action-button">Get Started</button>
+					</div>
+				</section>
+			</div>
 
 			<section class="main__features">
 				<div class="main__features-search">
