--- a/semana5/dia4/dom.html
+++ b/semana5/dia4/dom.html
@@ -8,10 +8,10 @@
   </head>
   <body>
 
-    <input type="text" placeholder="primero">
+    <!-- <input type="text" placeholder="primero"> -->
     <h1>DOM</h1>
     <form class="formulario" action="">
-      <input type="text" placeholder="ingrese su nombre " value="pepe" />
+      <input type="text" class="input_name" placeholder="ingrese su nombre " value="guillermo" />
       <input id="input_password" type="password" placeholder="ingrese su pass " value="123456" />
       <input class="input_lastname" type="text" placeholder="ingrese su apellido " value="zapata" />
       <input type="text" placeholder="ingrese su nombre " value="pepe zapata" />
@@ -26,6 +26,8 @@
     </div>
     <div id="container-list"></div>
 
-    <script src="./dom.js"></script>
+    <!-- <script src="./dom.js"></script> -->
+    <!-- <script src="./dom2.js"></script> -->
+    <script src="./dom3.js"></script>
   </body>
 </html>
