avance dia 1 semana 6

--- a/semana5/dia4/dom.html
+++ b/semana5/dia4/dom.html
@@ -26,8 +26,8 @@
     </div>
     <div id="container-list"></div>
 
-    <!-- <script src="./dom.js"></script> -->
+    <script src="./dom.js"></script>
     <!-- <script src="./dom2.js"></script> -->
-    <script src="./dom3.js"></script>
+    <!-- <script src="./dom3.js"></script> -->
   </body>
 </html>
