avance dia 2 semana 6

--- a/semana6/dia1/07-b5-formularios.html
+++ b/semana6/dia1/07-b5-formularios.html
@@ -33,6 +33,62 @@
 							<label for="input-password" class="form-label">Password:</label>
 							<input id="input-password" type="password" class="form-control" />
 						</div>
+
+						<div class="mb-3">
+							<label class="form-label" for="texto-descripcion"
+								>Descripción del producto</label
+							>
+							<textarea
+								class="form-control"
+								id="texto-descripcion"
+								cols="30"
+								rows="5"
+							></textarea>
+						</div>
+
+						<div class="mb-3 row">
+							<label for="" class="col-sm-2 col-form-label">Nombres:</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" placeholder="Juan" />
+							</div>
+						</div>
+
+						<div class="mb-3 row">
+							<div class="col-md-6">
+								<div class="row">
+									<label for="" class="col-sm-4 col-form-label"
+										>Fech. Nac.</label
+									>
+									<div class="col-sm-8">
+										<input type="date" class="form-control" />
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="row">
+									<label for="" class="col-sm-4 col-form-label">Salario:</label>
+									<div class="col-sm-8">
+										<input type="number" class="form-control" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mb-3">
+							<label for="" class="form-label">Subir CV</label>
+							<input type="file" class="form-control" />
+						</div>
+
+						<div class="mb-3">
+							<label for="" class="form-label">Seleccione país:</label>
+							<select name="" id="" class="form-select">
+								<option value="pe">Perú</option>
+								<option value="ch">Chile</option>
+								<option value="ar">Argentina</option>
+								<option value="ve">Venezuela</option>
+							</select>
+						</div>
+
 						<div class="mb-3 form-check">
 							<input
 								type="checkbox"
