avance dia 2 semana 6

--- a/semana6/dia1/07-b5-formularios.html
+++ b/semana6/dia1/07-b5-formularios.html
@@ -97,6 +97,33 @@
 							/>
 							<label for="check-recordar">Recordarme</label>
 						</div>
+
+						<div class="mb-3">
+							<div class="form-check">
+								<input
+									id="radio-masculino"
+									type="radio"
+									class="form-check-input"
+									name="genero"
+								/>
+								<label for="radio-masculino" class="form-check-label"
+									>Masculino</label
+								>
+							</div>
+							<div class="form-check">
+								<input
+									id="radio-femenino"
+									type="radio"
+									class="form-check-input"
+									name="genero"
+									checked
+								/>
+								<label for="radio-femenino" class="form-check-label"
+									>Femenino</label
+								>
+							</div>
+						</div>
+
 						<button type="submit" class="btn btn-primary">
 							Iniciar Sesión
 						</button>
