--- a/semana6/dia1/07-b5-formularios.html
+++ b/semana6/dia1/07-b5-formularios.html
@@ -35,6 +35,11 @@
 						</div>
 
 						<div class="mb-3">
+							<label for="input-edad" class="form-label">edad:</label>
+							<input id="input-edad" type="number" class="form-control" />
+						</div>
+
+						<div class="mb-3">
 							<label class="form-label" for="texto-descripcion"
 								>Descripción del producto</label
 							>
