--- a/semana6/dia1/08-b5-navbar-y-cards.html
+++ b/semana6/dia1/08-b5-navbar-y-cards.html
@@ -10,6 +10,13 @@
 			integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+			integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<title>Instalación Bootstrap 5</title>
 	</head>
 	<body>
@@ -87,6 +94,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Cartagena de Indias</h5>
 							<p class="card-text">
+								<span class="text-danger"><i class="fa-solid fa-map-pin"></i></span>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit.
 								Distinctio doloribus vero praesentium minima aliquam eaque
 								corporis tenetur, doloremque totam architecto! Ad, eligendi est!
