--- a/semana7/dia1/04-promesas-ejemplo.html
+++ b/semana7/dia1/04-promesas-ejemplo.html
@@ -10,6 +10,11 @@
 			integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
 			crossorigin="anonymous"
 		/>
+		<style>
+			.puntero {
+				cursor: pointer;
+			}
+		</style>
 		<title>Document</title>
 	</head>
 	<body>
