--- a/semana7/dia4/api.html
+++ b/semana7/dia4/api.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- VAMOS A CREAR UN BUSCADOR DE USUARIO DE GITHUB -->
-    <h1>CONSUMIENDO APIS</h1>
+   
     <section
       class="container vh-100 d-flex align-items-center justify-content-center"
     >
@@ -31,7 +31,7 @@
           </div>
           <div class="col-md-2">
             <div class="d-grid gap-2">
-              <button class="btn btn-danger">Buscar</button>
+              <button id="github-action-search" class="btn btn-danger">Buscar</button>
             </div>
           </div>
         </div>
@@ -88,6 +88,7 @@
     </section>
 
     <script src="./api.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
